<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"

     >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.AlbumFragment"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/con1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/album_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/imagen" />
                <TextView
                    android:id="@+id/album_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/album_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/album_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/album_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/album_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/con1"
            app:layout_constraintTop_toTopOf="@+id/con1"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="ExtraText">
                <TextView
                    android:id="@+id/performer_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:paddingTop="20dp"
                    android:text="@string/performer_title" />
                    />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_performers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/album_performer" />

                <TextView
                    android:id="@+id/track_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:paddingTop="20dp"
                    android:text="@string/track_title"/>
                />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/album_tracks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/album_track" />


                <TextView
                    android:id="@+id/comment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:paddingTop="20dp"
                    android:text="@string/comment_title" />
                />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/album_comments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/album_comment" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:paddingTop="20dp"
                    />
                />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
